fixing mavros launch

--- a/ros_packages/mrs_uav_gazebo_simulation/CMakeLists.txt
+++ b/ros_packages/mrs_uav_gazebo_simulation/CMakeLists.txt
@@ -46,6 +46,11 @@ install(DIRECTORY scripts/
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/scripts
   )
 
+install(DIRECTORY tmux/
+  USE_SOURCE_PERMISSIONS
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/tmux
+  )
+
 install(DIRECTORY ROMFS/
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/ROMFS
   )
