updated tmux session

--- a/ros_packages/mrs_uav_gazebo_simulation/tmux/one_drone/session.yml
+++ b/ros_packages/mrs_uav_gazebo_simulation/tmux/one_drone/session.yml
@@ -45,12 +45,8 @@ windows:
   - rviz:
       layout: tiled
       panes:
-        - waitForControl; roslaunch mrs_uav_testing rviz_random_simulation.launch
+        - waitForControl; roslaunch mrs_uav_core rviz.launch
         - waitForControl; roslaunch mrs_rviz_plugins load_robot.launch
-  - easy_control:
-      layout: tiled
-      panes:
-        - waitForRos; waitForControl; roslaunch mrs_uav_general logitech_joystick.launch
         - waitForRos; waitForControl; roslaunch mrs_rviz_plugins rviz_interface.launch
   - layout:
       layout: tiled
