--- a/ros_packages/mrs_uav_gazebo_simulation/tmux/one_drone/session.yml
+++ b/ros_packages/mrs_uav_gazebo_simulation/tmux/one_drone/session.yml
@@ -20,7 +20,7 @@ windows:
   - status:
       layout: tiled
       panes:
-        - waitForRos; roslaunch mrs_uav_status status.launch
+        - waitForHw; roslaunch mrs_uav_status status.launch
   - spawn:
       layout: tiled
       panes:
@@ -28,7 +28,7 @@ windows:
   - hw_api:
       layout: tiled
       panes:
-        - waitForRos; roslaunch mrs_uav_px4_api api.launch custom_config:=./custom_configs/hw_api.yaml
+        - waitForTime; roslaunch mrs_uav_px4_api api.launch custom_config:=./custom_configs/hw_api.yaml
   - control:
       layout: tiled
       panes:
@@ -36,7 +36,7 @@ windows:
   - takeoff:
       layout: tiled
       panes:
-        - waitForRos; roslaunch mrs_uav_autostart automatic_start.launch
+        - waitForHw; roslaunch mrs_uav_autostart automatic_start.launch
         - 'waitForControl; rosservice call /$UAV_NAME/hw_api/arming 1; sleep 2; rosservice call /$UAV_NAME/hw_api/offboard'
   - goto:
       layout: tiled
@@ -47,7 +47,7 @@ windows:
       panes:
         - waitForControl; roslaunch mrs_uav_core rviz.launch
         - waitForControl; roslaunch mrs_rviz_plugins load_robot.launch
-        - waitForRos; waitForControl; roslaunch mrs_rviz_plugins rviz_interface.launch
+        - waitForTime; waitForControl; roslaunch mrs_rviz_plugins rviz_interface.launch
   - layout:
       layout: tiled
       panes:
