fixed runtime error, updated tmux

--- a/ros_packages/mrs_uav_gazebo_simulation/tmux/one_drone/session.yml
+++ b/ros_packages/mrs_uav_gazebo_simulation/tmux/one_drone/session.yml
@@ -28,7 +28,7 @@ windows:
   - hw_api:
       layout: tiled
       panes:
-        - waitForTime; roslaunch mrs_uav_px4_api api.launch custom_config:=./custom_configs/hw_api.yaml
+        - waitForTime; roslaunch mrs_uav_px4_api api.launch
   - control:
       layout: tiled
       panes:
