--- a/ros_packages/mrs_uav_gazebo_simulation/tmux/one_drone/config/custom_config.yaml
+++ b/ros_packages/mrs_uav_gazebo_simulation/tmux/one_drone/config/custom_config.yaml
@@ -21,5 +21,6 @@ mrs_uav_managers:
         tracker: "LandoffTracker"
 
       after_takeoff:
-        controller: "Se3Controller"
+        controller: "MpcController"
+        # controller: "Se3Controller"
         tracker: "MpcTracker"
