--- a/ros_packages/mrs_uav_gazebo_simulation/tmux/one_drone_3dlidar/session.yml
+++ b/ros_packages/mrs_uav_gazebo_simulation/tmux/one_drone_3dlidar/session.yml
@@ -16,15 +16,12 @@ windows:
       layout: tiled
       panes:
         - waitForRos; roslaunch mrs_uav_gazebo_simulation simulation.launch world_name:=forest gui:=true
+        - waitForGazebo; rosservice call /mrs_drone_spawner/spawn "1 $UAV_TYPE --enable-rangefinder --enable-ouster --ouster-model OS0-128 --use-gpu-ray --horizontal-samples 128 --rotation-freq 10"
         - waitForControl; gz camera -c gzclient_camera -f $UAV_NAME; history -s gz camera -c gzclient_camera -f $UAV_NAME
   - status:
       layout: tiled
       panes:
         - waitForHw; roslaunch mrs_uav_status status.launch
-  - spawn:
-      layout: tiled
-      panes:
-        - waitForGazebo; rosservice call /mrs_drone_spawner/spawn "1 $UAV_TYPE --enable-rangefinder --enable-ground-truth --enable-ouster --ouster-model OS0-128 --use-gpu-ray --horizontal-samples 128 --rotation-freq 10"
   - hw_api:
       layout: tiled
       panes:
@@ -51,7 +48,7 @@ windows:
       panes:
         - waitForControl; roslaunch mrs_uav_core rviz.launch
         - waitForControl; roslaunch mrs_rviz_plugins load_robot.launch
-        - waitForTime; waitForControl; roslaunch mrs_rviz_plugins rviz_interface.launch
+        - waitForControl; roslaunch mrs_rviz_plugins rviz_interface.launch
   - layout:
       layout: tiled
       panes:
