--- a/ros_packages/mrs_uav_gazebo_simulation/tmux/one_drone_vio/session.yml
+++ b/ros_packages/mrs_uav_gazebo_simulation/tmux/one_drone_vio/session.yml
@@ -5,7 +5,7 @@ socket_name: mrs
 attach: false
 tmux_options: -f /etc/ctu-mrs/tmux.conf
 # you can modify these
-pre_window: export UAV_NAME=uav1; export RUN_TYPE=simulation; export UAV_TYPE=x500
+pre_window: export UAV_NAME=uav1; export RUN_TYPE=simulation; export UAV_TYPE=f330
 startup_window: status
 windows:
   - roscore:
@@ -15,13 +15,18 @@ windows:
   - gazebo:
       layout: tiled
       panes:
-        - waitForRos; roslaunch mrs_uav_gazebo_simulation simulation.launch world_name:=grass_plane gui:=true
-        - waitForGazebo; rosservice call /mrs_drone_spawner/spawn "1 $UAV_TYPE --enable-rangefinder"
+        - waitForRos; roslaunch mrs_uav_gazebo_simulation simulation.launch world_name:=mrs_city gui:=true
+        - waitForGazebo; rosservice call /mrs_drone_spawner/spawn "1 $UAV_TYPE --enable-rangefinder --enable-vio"
         - waitForControl; gz camera -c gzclient_camera -f $UAV_NAME; history -s gz camera -c gzclient_camera -f $UAV_NAME
   - status:
       layout: tiled
       panes:
         - waitForHw; roslaunch mrs_uav_status status.launch
+  - vio_data:
+      layout: tiled
+      panes:
+        - waitForHw; rostopic echo /$UAV_NAME/vio/imu
+        - waitForHw; rosrun rqt_image_view rqt_image_view /$UAV_NAME/vio/camera/image_raw
   - hw_api:
       layout: tiled
       panes:
