added basic test

--- a/ros_packages/mrs_uav_gazebo_simulation/CMakeLists.txt
+++ b/ros_packages/mrs_uav_gazebo_simulation/CMakeLists.txt
@@ -33,6 +33,19 @@ include_directories(
   )
 
 ## --------------------------------------------------------------
+## |                           Testing                          |
+## --------------------------------------------------------------
+
+if(CATKIN_ENABLE_TESTING)
+
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --coverage")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage")
+
+  add_subdirectory(test)
+
+endif()
+
+## --------------------------------------------------------------
 ## |                           Install                          |
 ## --------------------------------------------------------------
 
