--- a/.gitman.yml
+++ b/.gitman.yml
@@ -2,7 +2,7 @@ location: .gitman
 sources:
   - repo: https://github.com/ctu-mrs/mrs_gazebo_common_resources.git
     name: mrs_gazebo_common_resources
-    rev: master
+    rev: uas_mapping
     type: git
     params:
     sparse_paths:
