--- a/ros_packages/mrs_uav_gazebo_simulation/package.xml
+++ b/ros_packages/mrs_uav_gazebo_simulation/package.xml
@@ -26,7 +26,8 @@
   <depend>rospy</depend>
   <depend>std_msgs</depend>
   <depend>mrs_uav_testing</depend>
-
+  <depend>ignition-math6</depend>
+  
   <depend>python3-jinja2</depend>
 
   <export>
