--- a/ros_packages/mrs_uav_gazebo_simulation/tmux/one_drone/session.yml
+++ b/ros_packages/mrs_uav_gazebo_simulation/tmux/one_drone/session.yml
@@ -5,7 +5,7 @@ socket_name: mrs
 attach: false
 tmux_options: -f /etc/ctu-mrs/tmux.conf
 # you can modify these
-pre_window: export UAV_NAME=uav1; export RUN_TYPE=simulation; export UAV_TYPE=x500
+pre_window: export UAV_NAME=uav1; export RUN_TYPE=simulation; export UAV_TYPE=naki
 startup_window: status
 windows:
   - roscore:
