--- a/ros_packages/mrs_uav_gazebo_simulation/tmux/one_drone/session.yml
+++ b/ros_packages/mrs_uav_gazebo_simulation/tmux/one_drone/session.yml
@@ -5,7 +5,7 @@ socket_name: mrs
 attach: false
 tmux_options: -f /etc/ctu-mrs/tmux.conf
 # you can modify these
-pre_window: export UAV_NAME=uav1; export RUN_TYPE=simulation; export UAV_TYPE=x500
+pre_window: export UAV_NAME=uav1; export RUN_TYPE=simulation; export UAV_TYPE=naki
 startup_window: status
 windows:
   - roscore:
@@ -16,7 +16,7 @@ windows:
       layout: tiled
       panes:
         - waitForRos; roslaunch mrs_uav_gazebo_simulation simulation.launch world_name:=grass_plane gui:=true
-        - waitForGazebo; rosservice call /mrs_drone_spawner/spawn "1 --$UAV_TYPE --enable-rangefinder"
+        - waitForGazebo; rosservice call /mrs_drone_spawner/spawn "1 --$UAV_TYPE"
         - waitForControl; gz camera -c gzclient_camera -f $UAV_NAME; history -s gz camera -c gzclient_camera -f $UAV_NAME
   - status:
       layout: tiled
