--- a/ros_packages/.gitman.yml
+++ b/ros_packages/.gitman.yml
@@ -12,6 +12,18 @@ sources:
         target: mrs_gazebo_common_resources
     scripts:
       - git submodule update --init --recursive
+  - repo: https://github.com/ctu-mrs/mrs_uav_gazebo_testing.git
+    name: mrs_uav_gazebo_testing
+    rev: master
+    type: git
+    params:
+    sparse_paths:
+      -
+    links:
+      - source: ''
+        target: mrs_uav_gazebo_testing
+    scripts:
+      - git submodule update --init --recursive
   - repo: https://github.com/ctu-mrs/px4_firmware.git
     name: px4_firmware
     rev: 1.13.2-dev
