--- a/ros_packages/.gitman.yml
+++ b/ros_packages/.gitman.yml
@@ -1,32 +1,32 @@
 location: .gitman
 sources:
-  - repo: https://github.com/ctu-mrs/mrs_gazebo_common_resources.git
-    name: mrs_gazebo_common_resources
-    rev: master
-    type: git
-    params:
-    sparse_paths:
-      -
-    links:
-      - source: ''
-        target: mrs_gazebo_common_resources
-    scripts:
-      - git submodule update --init --recursive
-  - repo: https://github.com/ctu-mrs/mrs_uav_gazebo_testing.git
-    name: mrs_uav_gazebo_testing
-    rev: master
-    type: git
-    params:
-    sparse_paths:
-      -
-    links:
-      - source: ''
-        target: mrs_uav_gazebo_testing
-    scripts:
-      - git submodule update --init --recursive
+  # - repo: https://github.com/ctu-mrs/mrs_gazebo_common_resources.git
+  #   name: mrs_gazebo_common_resources
+  #   rev: master
+  #   type: git
+  #   params:
+  #   sparse_paths:
+  #     -
+  #   links:
+  #     - source: ''
+  #       target: mrs_gazebo_common_resources
+  #   scripts:
+  #     - git submodule update --init --recursive
+  # - repo: https://github.com/ctu-mrs/mrs_uav_gazebo_testing.git
+  #   name: mrs_uav_gazebo_testing
+  #   rev: master
+  #   type: git
+  #   params:
+  #   sparse_paths:
+  #     -
+  #   links:
+  #     - source: ''
+  #       target: mrs_uav_gazebo_testing
+  #   scripts:
+  #     - git submodule update --init --recursive
   - repo: https://github.com/ctu-mrs/px4_firmware.git
     name: px4_firmware
-    rev: 1.13.2-dev
+    rev: 1.15.4-dev
     type: git
     params:
     sparse_paths:
@@ -36,15 +36,15 @@ sources:
         target: px4_firmware
     scripts:
       - git submodule update --init --recursive
-  - repo: https://github.com/ctu-mrs/px4_sitl_gazebo.git
-    name: mavlink_sitl_gazebo
-    rev: firmware_1.13.2-deb
-    type: git
-    params:
-    sparse_paths:
-      -
-    links:
-      - source: ''
-        target: mavlink_sitl_gazebo
-    scripts:
-      - git submodule update --init --recursive
+  # - repo: https://github.com/ctu-mrs/px4_sitl_gazebo.git
+  #   name: mavlink_sitl_gazebo
+  #   rev: firmware_1.13.2-deb
+  #   type: git
+  #   params:
+  #   sparse_paths:
+  #     -
+  #   links:
+  #     - source: ''
+  #       target: mavlink_sitl_gazebo
+  #   scripts:
+  #     - git submodule update --init --recursive
